analogue Change Log

Version 0.9-2

	* wa: small tolerances can now be replaced by the mean
	tolerance of the set of tolerances that are not small.

Version 0.9-1

	* splitSample: new function to sample a test set from across
	an environmental gradient by breaking gradient into a series
	of chunks and sampling approximately equally from within each
	chunk.

Version 0.9-0

	* caterpillarPlot: new function that draws a caterpillar plot
	of species WA optima and tolerances. Methods for data frames
	and wa() fits are available alongside the default method.

Version 0.8-2

	* Dependencies: analogue now requires R >= 2.15.0

	* Replaced remaining instances of `.Internal`; now use
	`.colSums` and `.rowSums` from R 2.15.0

	* Deleted jss.bst from inst/doc

	* Vignettes: these are now in vignettes not inst/docs

Version 0.8-1

	* cma: if cutoff meant that all analogues returned for all
	sites, code would return an array instead of the usual list.
	This is now fixed in all methods.

	* Replaced instances of `.Internal(sample(....))` with
	`sample.int(....)` at request of Brian Ripley.

Version 0.8-0

	* Updated Example test checks and packaged for release to CRAN
	Jan 11, 2012.

Version 0.7-7

	* mat: new argument `kmax` can be used to limit the number of
	analogues considered as models when fitting MAT transfer
	functions. By default, `mat()` considers models with 1 through
	to n-1 analogues (n = number of sites). `kmax` can control this
	upper limit which will speed up fitting models, especially for
	large training sets. Invariably one wouldn't want to average
	over entire training sets to produce predictions, or even over
	large numbers of analogues. As such I may set an upper limit for
	the default value of `kmax` before this is released to CRAN.

	* cumWmean, cummean: as a result of the above addition of `kmax`,
	these two functions now take a `kmax` argument also. The default
	behaviour is unchanged however.
