@@ -5,6 +5,8 @@ Version 0.9-2
 	* wa: small tolerances can now be replaced by the mean
 	tolerance of the set of tolerances that are not small.
 
+	* splitSample: several bug fixes and sanity checks.
+
 Version 0.9-1
 
 	* splitSample: new function to sample a test set from across
